--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href = "../CSS/styles.css">
+    <link rel="stylesheet" href = "CSS/styles.css">
     <link rel="preconnect" href = "https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Mega&family=PT+Serif:ital,wght@1,700&display=swap" rel="stylesheet">
     <title>Adel Kuanysheva</title>
@@ -13,8 +13,8 @@
         <nav class="header">
             <ul class="top">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="courses.html">Courses</a></li>
+                <li><a href="./pages/about.html">About</a></li>
+                <li><a href="./pages/courses.html">Courses</a></li>
             </ul>
         </nav>
         <nav class="side">
