--- a/pages/courses.html
+++ b/pages/courses.html
@@ -12,7 +12,7 @@
     <div class = "container">
         <nav class="header">
             <ul class="top">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="courses.html">Courses</a></li>
             </ul>
